# project-root

./: .gitignore
backend/: project.code-workspace
backend/infrastructure/: docker-compose.yml
backend/infrastructure/nginx/: default.conf
backend/infrastructure/postgres/: init.sql
backend/services/api-gateway/: Dockerfile  pyproject.toml
backend/services/api-gateway/app/: main.py
backend/services/auth-service/: Dockerfile  pyproject.toml
backend/services/auth-service/app/: main.py
backend/services/auth-service/app/api/: schemas.py
backend/services/auth-service/app/core/: config.py  security.py
backend/services/auth-service/app/db/: session.py
backend/services/auth-service/app/db/migrations/: env.py
backend/services/auth-service/app/models/: user.py
backend/services/auth-service/app/repositories/: base_dao.py  user_repo.py
backend/services/auth-service/app/services/: role_service.py
